--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "6.22.3",
-    "zustand": "^5.0.9",
-    "vite": "^7.3.0",
-    "@vitejs/plugin-react": "^5.1.2"
+    "zustand": "^5.0.10",
+    "cmdk": "1.0.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
