--- a/one-medi-next/package.json
+++ b/one-medi-next/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.11",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
